2004-04-21  David Bateman  <dbateman@free.fr>

	* DLD_FUNCTIONS/fft.cc(do_fft): Correctly initialize the variable dim
	for scalar arguments.

	* DLD-FUNCTIONS/minmax.cc: Handle single vector arg correctly.

2004-04-20  John W. Eaton  <jwe@octave.org>

	* ls-mat-ascii.cc (read_mat_ascii_data): Prepend "X" to keywords.
	Only drop text after last "." in name.

	* lex.l (is_keyword): New function.
	(Fiskeyword): Use it.
	* lex.h: Provide decl.

	* lex.l (is_keyword_token): Rename from is_keyword.

2004-04-16  John W. Eaton  <jwe@octave.org>

	* file-io.cc (maybe_warn_interface_change): New function.
	(fopen_mode_to_ios_mode): Use it.

2004-04-16  Paul Kienzle  <pkienzle@users.sf.net>

	* file-io.cc (fopen_mode_to_ios_mode):  Default to binary mode.
	(Ffopen): Document 't' and 'b' mode flags.

2004-04-16  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DLD_XSRC): Add gcd.cc to the list.

2004-04-16  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/gcd.cc: New file.

2004-04-15  David Bateman  <dbateman@free.fr>

	* src/ov-ch-mat.h: convert_to_str_interal returns charNDArray.

2004-04-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_BUGS_STATEMENT): Bug list is now bug@octave.org.

2004-04-08  John W. Eaton  <jwe@octave.org>

	* ov-base-mat.cc (octave_base_matrix<MT>::do_index_op): Quit early
	if an error occurs when creating index vector object.

	* ov.cc (octave_value::numeric_assign): Always call maybe_mutate
	on return value.

2004-04-06  David Bateman  <dbateman@free.fr>

  	* DLD_FUNCTIONS/sort.cc: Use the new template sort class, adapt for
	N-d arrays, and allow optional dim argument.

	* DLD_FUNCTIONS/fftn.cc: Save result of transpose operation.
	Check for failure of transpose.

2004-04-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-bool.h (octave_bool::bool_array_value): New function.

	* ov-base-mat.cc (octave_base_matrix<MT>::subsasgn): Don't allow
	expressions like x(i)(j) or x(i){j} when x is empty.
